<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:id="@+id/showPointsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showPointsButtonText"/>

    <Button
        android:id="@+id/hidePointsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hidePointsButtonText" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startButtonText" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopButtonText" />

    <Button
        android:id="@+id/colorSampleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sampleButtonText" />

    <Button
        android:id="@+id/locationSampleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locationSampleButtonText" />

    <Button
        android:id="@+id/moveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/moveButtonText" />
</LinearLayout>

